# csc

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt
examples/: CT_pr-curves utils.ipynb  buildAlphaCSCResults.ipynb  buildBorelliMMP27.ipynb  buildBorelliMMP3.ipynb  buildBorelliMMP81.ipynb  buildBorelliMMP9.ipynb  buildMMPDFSparVar.ipynb  buildOMPSparVar.ipynb  build_mmpdf_db.ipynb  build_mp_db.ipynb  build_omp_db.ipynb  build_signals_db.ipynb  comp_position_noise_density.ipynb  conv-mmp.ipynb  conv_omp_test_batch.ipynb  icassp_mmpdf_prc.ipynb  icassp_prc_debug.ipynb  icassp_prc_solution.ipynb  icassp_signal_db.ipynb  mmp_complexity.ipynb  mmp_demo.ipynb  mmp_networkx.ipynb  mmp_test_workbench.ipynb  mmp_tree.ipynb  mmpdf_icassp.ipynb  mmpdf_metrics.ipynb  mmpdf_metrics_overlap.ipynb  mmpdf_sorting_metrics.ipynb  norm_signal_db.ipynb  omp_from_db.ipynb  omp_sorting_metrics.ipynb  omp_workbench.ipynb  out_alpha.ipynb  out_alpha_db.ipynb  out_borelli_mmp27.ipynb  out_borelli_mmp3.ipynb  out_borelli_mmp81.ipynb  out_borelli_mmp9.ipynb  out_build_240728.ipynb  out_build_mmpdf27.ipynb  (+28 more)
icassp/: 240724_sparVar_results.ipynb  DEBUG_DISSIMILARITY.ipynb  DISSIMILARITY_DEBUG.ipynb  DISSIMILARITY_STONKS.ipynb  PRC_corrBoxplot.ipynb  PRC_sparVar.ipynb  PRC_sparVar_noCorr.ipynb  buildMMPDFSparVar.ipynb  buildMPSparVar.ipynb  buildOMPSparVar.ipynb  build_constrained_signals_db.ipynb  build_signals_db.ipynb  demoAlphaCSC.ipynb  deprecated_prc_mmpdf_db.ipynb  deprecated_prc_mp_db.ipynb  deprecated_prc_omp_db.ipynb  icassp_atom_matching.ipynb  icassp_f1_vs_time.ipynb  (+27 more)
(+54 files in other folders)
